# supplementary-education-system

backend/: pyproject.toml
backend/src/app/application/repositories/: lesson.py
backend/src/app/application/use_cases/lesson/: __init__.py  create.py  get_my.py
backend/src/app/application/use_cases/organization/: get_all.py
backend/src/app/domain/: entities.py
backend/src/app/infrastructure/auth/: token_parser.py  token_processor.py
backend/src/app/infrastructure/db/: models.py
backend/src/app/infrastructure/db/migrations/versions/: 2026_03_22_1945-22c75be5848e_initial.py  2026_03_22_1945-7a0552a6591e_rls.py
backend/src/app/infrastructure/db/repositories/: lesson.py
backend/src/app/infrastructure/di/providers/: use_cases.py
backend/src/app/presentation/api/: main.py
backend/src/app/presentation/api/common/: cookie.py
backend/src/app/presentation/api/routers/course/: models.py
backend/src/app/presentation/api/routers/lesson/: models.py  router.py
backend/src/app/presentation/api/routers/organization/: router.py
backend/src/app/presentation/api/routers/user/: models.py  router.py
backend/tests/: test_main.py
